--- a/src/front/index.html
+++ b/src/front/index.html
@@ -13,17 +13,48 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div class="container">
+      <div class="title">
+        <h1>Things to do</h1>
       </div>
+      <div class="new-task">
+        <a class="add-new" href="#">
+          <i class="fa fa-plus"></i>
+        </a>
+        <input id="todo-text" placeholder="New task" />
+      </div>
+      <ul>
+        <li class="row">
+          <a class="remove" href="#">
+            <i class="fa fa-trash-o"></i>
+          </a>
+          Go to the bank
+        </li>
+        <li class="row">
+          <a class="remove" href="#">
+            <i class="fa fa-trash-o"></i>
+          </a>
+          Buy food
+        </li>
+        <li class="row">
+          <a class="remove" href="#">
+            <i class="fa fa-trash-o"></i>
+          </a>
+          Clean the house
+        </li>
+        <li class="row">
+          <a class="remove" href="#">
+            <i class="fa fa-trash-o"></i>
+          </a>
+          Make dinner
+        </li>
+        <li class="row">
+          <a class="remove" href="#">
+            <i class="fa fa-trash-o"></i>
+          </a>
+          Pick up the kids
+        </li>
+      </ul>
     </div>
   </body>
 </html>
